Spacing: Fixed the paranoia of my hamburger menu icon being off-center

--- a/portfolio-website/src/styles/Navigation.css
+++ b/portfolio-website/src/styles/Navigation.css
@@ -5,10 +5,6 @@
   justify-content: space-between;
 }
 
-.hamburger-menu {
-  margin-top: 1%;
-}
-
 .hide {
   display: none;
 }
